# topicer

./: .gitattributes  .gitignore  README.md  config.ini  config.sh  config.yaml  db_handler.py  docker-compose.yml  download.sh  embedder.py  exceptions.py  myclass.py  pyproject.toml  requirements.bak  requirements.txt  run.py  schemas.py  start_tunnel.py  start_tunnel.sh  tag_proposals.py  test.py  test_data.py  weaviate_utils.py
.github/: copilot-instructions.md
deploy/: Dockerfile_deploy  compose.yaml  update.sh
deploy/.deploy/: .env  config
docs/: documentation.md
examples/: example.py
examples/classconfig/: try_config.py
examples/configs/: example_config.yaml
examples/cross_bert/: config.yaml  run.py
examples/gliner/: config.yaml  run.py
examples/llm/: create_config_ollama.sh  create_config_openai.sh  run_call_ollama.py  run_call_openai.py  run_ollama.sh  run_openai.sh
examples/topic_discovery/: create_config.sh  run.sh  run_topic_discovery.py
ssh_tunnel_setup/: config.ini  config.sh  start_tunnel.py  start_tunnel.sh
tests/: test_data.py
tests/cross_bert/: config_hf.yaml  config_local.yaml  test_cross_bert.py
tests/gliner/: pretrained_config.yaml  test_pretrained_gliner.py
tests/propose_tags/: script.py
tests/propose_tags2/: script.py
tests/test_api/: conftest.py  test_fast_topic.py  test_general.py  test_propose_tags.py
tests/test_embedding/: test_local.py
tests/test_llm/: __init__.py  test_api_async.py
topicer/: __init__.py  base.py  schemas.py
topicer/llm/: __init__.py  (+2 more)
topicer_api/: config.py  main.py  run.py  topicers.py
(+50 files in other folders)
